# MythicAI

./: .gitmodules  README.md  SECURITY.md  index.html  package-lock.json  package.json
.github/workflows/: codeql.yml
public/: terms-of-use.md
src/: App.vue  Modal.vue  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/backend/: gen_core.py
src-tauri/plugins/core-playground/: config.yml
src-tauri/plugins/template/: config.yml  main.js
src-tauri/src/: main.rs
