[package]
name = "mythic_ai"
version = "0.0.0"
description = "Advanced, shareable, and easily expandable text-generation + misc Web-UI platform"
authors = ["igor Alexey, Ricco Jong"]
license = "GPL-3.0"
repository = "https://github.com/vortexdevsoftware/MythicAI"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["fs-all", "path-all", "shell-open", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
